# catch-a-ball-2d

./: CMakeLists.txt  LICENSE  README.md  build.sh  config.yaml  control.cpp  control.hpp  main.cpp  simulator.cpp  simulator.hpp
include/: control.hpp  objects.hpp  simulator.hpp
src/: control.cpp  main.cpp  objects.cpp  simulator.cpp
